--- a/includes/gen_dom.tex
+++ b/includes/gen_dom.tex
@@ -5,10 +5,10 @@
 \toprule
 \multicolumn{1}{l}{} &  \\ 
 \midrule\addlinespace[2.5pt]
-ER & $0.0965$ \\ 
-AS & $0.0560$ \\ 
-SL & $0.0399$ \\ 
-WE & $0.0700$ \\ 
+ability & $0.0965$ \\ 
+motivation & $0.0560$ \\ 
+tact & $0.0399$ \\ 
+skill & $0.0700$ \\ 
 \bottomrule
 \end{longtable}
 
