--- a/includes/all_subsets.tex
+++ b/includes/all_subsets.tex
@@ -5,21 +5,21 @@
 \toprule
  &  \\ 
 \midrule\addlinespace[2.5pt]
-SJ \textasciitilde{} ER & $0.1524$ \\ 
-SJ \textasciitilde{} AS & $0.1131$ \\ 
-SJ \textasciitilde{} SL & $0.0744$ \\ 
-SJ \textasciitilde{} WE & $0.1219$ \\ 
-SJ \textasciitilde{} ER + AS & $0.1887$ \\ 
-SJ \textasciitilde{} ER + SL & $0.2006$ \\ 
-SJ \textasciitilde{} ER + WE & $0.2248$ \\ 
-SJ \textasciitilde{} AS + SL & $0.1584$ \\ 
-SJ \textasciitilde{} AS + WE & $0.1844$ \\ 
-SJ \textasciitilde{} SL + WE & $0.1502$ \\ 
-SJ \textasciitilde{} ER + AS + SL & $0.2266$ \\ 
-SJ \textasciitilde{} ER + AS + WE & $0.2442$ \\ 
-SJ \textasciitilde{} ER + SL + WE & $0.2459$ \\ 
-SJ \textasciitilde{} AS + SL + WE & $0.2050$ \\ 
-SJ \textasciitilde{} ER + AS + SL + WE & $0.2624$ \\ 
+solution \textasciitilde{} ability & $0.1524$ \\ 
+solution \textasciitilde{} motivation & $0.1131$ \\ 
+solution \textasciitilde{} tact & $0.0744$ \\ 
+solution \textasciitilde{} skill & $0.1219$ \\ 
+solution \textasciitilde{} ability + motivation & $0.1887$ \\ 
+solution \textasciitilde{} ability + tact & $0.2006$ \\ 
+solution \textasciitilde{} ability + skill & $0.2248$ \\ 
+solution \textasciitilde{} motivation + tact & $0.1584$ \\ 
+solution \textasciitilde{} motivation + skill & $0.1844$ \\ 
+solution \textasciitilde{} tact + skill & $0.1502$ \\ 
+solution \textasciitilde{} ability + motivation + tact & $0.2266$ \\ 
+solution \textasciitilde{} ability + motivation + skill & $0.2442$ \\ 
+solution \textasciitilde{} ability + tact + skill & $0.2459$ \\ 
+solution \textasciitilde{} motivation + tact + skill & $0.2050$ \\ 
+solution \textasciitilde{} ability + motivation + tact + skill & $0.2624$ \\ 
 \bottomrule
 \end{longtable}
 
