--- a/includes/poisson_coeff.tex
+++ b/includes/poisson_coeff.tex
@@ -1,16 +1,16 @@
 \begin{longtable}{l|rrrrr}
 \caption*{
-{\large Table 5: Poisson Regression Predicting Sport Jackets Produced}
+{\large Table 5: Poisson Regression Predicting Relationship Problem Solutions Produced}
 } \\ 
 \toprule
 \multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{95\% Confidence Interval} &  \\ 
 \cmidrule(lr){4-5}
 \multicolumn{1}{l}{} & B & \textbackslash{}sigma\_\{B\} & Low & High & e\textasciicircum{}B \\ 
 \midrule\addlinespace[2.5pt]
-ER & $0.2431$ & $0.0114$ & $0.2208$ & $0.2655$ & $1.2753$ \\ 
-AS & $0.1081$ & $0.0095$ & $0.0896$ & $0.1267$ & $1.1142$ \\ 
-SL & $0.0999$ & $0.0083$ & $0.0835$ & $0.1162$ & $1.1050$ \\ 
-WE & $0.1158$ & $0.0069$ & $0.1024$ & $0.1293$ & $1.1228$ \\ 
+ability & $0.2431$ & $0.0114$ & $0.2208$ & $0.2655$ & $1.2753$ \\ 
+motivation & $0.1081$ & $0.0095$ & $0.0896$ & $0.1267$ & $1.1142$ \\ 
+tact & $0.0999$ & $0.0083$ & $0.0835$ & $0.1162$ & $1.1050$ \\ 
+skill & $0.1158$ & $0.0069$ & $0.1024$ & $0.1293$ & $1.1228$ \\ 
 Intercept & $-0.1507$ & $0.0138$ & $-0.1780$ & $-0.1237$ & $0.8601$ \\ 
 \bottomrule
 \end{longtable}
